fixed footer on small devices.

--- a/templates/assets/css/responsive.css
+++ b/templates/assets/css/responsive.css
@@ -31,6 +31,16 @@ For Extra Small Devices
 	#page_footer{
 		margin-top:25px; 
 	}
+
+	/* Footer */
+	.dotted-spaced {
+		margin-right:10px;
+		margin-left:10px;
+		padding:15px 0;
+	}
+	.dotted-spaced > div{
+		padding:0;
+	}
 }
 
 /*
